Bug 1597419 - Remove nsIDocShellTreeItem from nsCopySupport::FireClipboardEvent. r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D57207